# food_ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Snakefile  _quarto.yml  contributing.md  dvc.yaml  params.yaml  pyproject.toml  streamlit.Dockerfile  worker.Dockerfile
.dvc/: config
.github/workflows/: docker-ci.yml  docker.yml  dvc-ci.yaml  dvc-ci.yml  model-ci.yml  package-ci.yml  python-package.yml
docs/: contributing.html  index.html  search.json
dvc_plots/: index.html
src/clear_ml/: __init__.py  __main__.py  cb_model.ipynb  clearml_research.md  cli.py  dataset_split.py  docker-compose.yml  pipeline_data_etl.py  pipeline_from_functions.py  pipeline_model.py  preprocessing.py  step1_dataset_artifact.py  step2_data_processing.py  step3_train_model.py
src/fast_api/: app.py  docker-compose.yml  example_request.py  fast_api_research.md
src/fast_api/connections/: broker.py
src/fast_api/schemas/: healthcheck.py  requests.py
src/fast_api/services/: model.py  utils.py
src/feat_store/: create_sample_df.py  feat_store_research.md
src/hypothesis/: hypothesis.md
src/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kube_research.md
src/lakefs/: docker-compose.yml  lakefs-research.md  lakefs_add_data.py  lakefs_data_pipeline.py  minio_add_data.py
src/mlflow/: mlflow-research.md  mlflow_tracking_cb.py  mlflow_tracking_lr.py
src/mlops_ods/: train_predict.py
src/streamlit/: .env  app.py  docker-compose.yml  streamlit_research.md
tests/: test_train_predict.py
tests/app/: test_example.py
(+72 files in other folders)
