[tool.poetry]
name = "food-ml"
version = "0.1.0"
description = ""
authors = ["Iuliia Fokina"]
readme = "README.md"
packages = [{include = "food_ml"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"
pre-commit = "3.7.0"
pre-commit-hooks = "4.5.0"
ruamel-yaml = "^0.18.6"

[tool.black]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
exclude = [".git", "venv"]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
